# kolosal-server

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README-termux.md  README.md  config.example.json  config.example.yaml  config.json  config.yaml  config_rms.yaml  install-termux.sh  kolosal-server.service
cmake/: ucm.cmake
cmake/overrides/: MakeDist.cmake
configs/: config.linux.yaml  config.macos.yaml  config.yaml  config_rms.yaml  local-retrieval-config.yaml
docs/: ADD_DOCUMENTS_API_GUIDE.md  CHUNKING_API_GUIDE.md  DOWNLOADS_API_GUIDE.md  ENGINES_API_GUIDE.md  INFO_DOCUMENTS_API_GUIDE.md  INTERNET_SEARCH_GUIDE.md  LIST_DOCUMENTS_API_GUIDE.md  MODELS_API_GUIDE.md  PARSE_DOCUMENTS_API_GUIDE.md  REMOVE_DOCUMENTS_API_GUIDE.md  RETRIEVE_API_GUIDE.md
include/kolosal/: download_manager.hpp  download_utils.hpp  export.hpp  faiss_client.hpp  gpu_detection.hpp  inference_loader.hpp  logger.hpp  metrics_converter.hpp  node_manager.h  qdrant_client.hpp  server.hpp  server_api.hpp  server_config.hpp  utils.hpp  vector_database.hpp
include/kolosal/auth/: auth_middleware.hpp  cors_handler.hpp  rate_limiter.hpp
include/kolosal/models/: add_engine_request_model.hpp  add_model_request_model.hpp  add_model_response_model.hpp  chat_message_model.hpp  chunking_request_model.hpp  chunking_response_model.hpp  embedding_request_model.hpp  embedding_response_model.hpp  model_status_request_model.hpp  model_status_response_model.hpp  remove_model_request_model.hpp  remove_model_response_model.hpp
include/kolosal/retrieval/: add_document_types.hpp  add_documents_route.hpp  chunking_types.hpp  document_list_types.hpp  document_service.hpp  parse_docx.hpp  parse_html.hpp  parse_pdf.hpp  remove_document_types.hpp  remove_documents_route.hpp  retrieve_types.hpp
include/kolosal/routes/: add_documents_route.hpp  add_model_route.hpp  chat_completion_route.hpp  chunking_route.hpp  completion_route.hpp  documents_route.hpp  downloads_route.hpp  embedding_route.hpp  engines_route.hpp  health_status_route.hpp  inference_chat_completion_route.hpp  inference_completion_route.hpp  internet_search_route.hpp  list_inference_engines_route.hpp  list_models_route.hpp  model_status_route.hpp  models_route.hpp  oai_completions_route.hpp  parse_document_route.hpp  parse_docx_route.hpp  parse_html_route.hpp  parse_pdf_route.hpp  pause_download_route.hpp  remove_documents_route.hpp  remove_model_route.hpp  resume_download_route.hpp  retrieve_route.hpp  route_interface.hpp  server_logs_route.hpp  ui_routes.hpp
include/kolosal/routes/config/: auth_config_route.hpp
include/kolosal/routes/llm/: completion_route.hpp  oai_completions_route.hpp
include/kolosal/routes/retrieval/: chunking_route.hpp  documents_route.hpp  embedding_route.hpp  internet_search_route.hpp  parse_document_route.hpp
inference/: CLAUDE.md  CMakeLists.txt  README.md
inference/examples/: CMakeLists.txt  README.md  grammar_example.cpp  json_schema_example.cpp
inference/include/: inference.h  inference_interface.h
inference/src/: inference.cpp
inference/tests/: run_long_context_tests.sh  test_auto_seq.cpp  test_chat.cpp  test_chat_multiturn.cpp  test_common.h  test_completion_basic.cpp  test_embedding.cpp  test_grammar.cpp  test_inference.cpp  test_invalid_and_cancel.cpp  test_json_grammar.cpp  test_json_schema.cpp  test_long_context.cpp  test_multi_gpu.cpp  test_overflow_save.cpp  test_parallel.cpp  test_session_cache.cpp  test_ttft_performance.cpp
src/: download_manager.cpp  download_utils.cpp  faiss_client.cpp  gpu_detection.cpp  inference.cpp  inference_interface_impl.cpp  inference_loader.cpp  logger.cpp  main.cpp  metrics_converter.cpp  node_manager.cpp  qdrant_client.cpp  server.cpp  server_api.cpp  server_config.cpp
src/auth/: auth_middleware.cpp  cors_handler.cpp  rate_limiter.cpp
src/models/: chunking_request_model.cpp  chunking_response_model.cpp  embedding_request_model.cpp  embedding_response_model.cpp
src/retrieval/: add_document_types.cpp  chunking_types.cpp  document_list_types.cpp  document_service.cpp  parse_docx.cpp  parse_html.cpp  parse_pdf.cpp  parse_pdf_stub.cpp  remove_document_types.cpp  remove_documents_route.cpp  retrieve_types.cpp
src/routes/: add_documents_route.cpp  add_engine_route.cpp  add_model_route.cpp  cancel_all_downloads_route.cpp  cancel_download_route.cpp  chat_completion_route.cpp  chunking_route.cpp  completion_route.cpp  documents_route.cpp  download_progress_route.cpp  downloads_route.cpp  downloads_status_route.cpp  embedding_route.cpp  engine_status_route.cpp  engines_route.cpp  health_status_route.cpp  inference_chat_completion_route.cpp  inference_completion_route.cpp  list_engines_route.cpp  list_inference_engines_route.cpp  list_models_route.cpp  model_status_route.cpp  models_route.cpp  parse_document_route.cpp  parse_docx_route.cpp  parse_html_route.cpp  parse_pdf_route.cpp  pause_download_route.cpp  remove_documents_route.cpp  remove_model_route.cpp  resume_download_route.cpp  retrieve_route.cpp  server_logs_route.cpp  ui_routes.cpp
src/routes/config/: auth_config_route.cpp
src/routes/llm/: completion_route.cpp  oai_completions_route.cpp
src/routes/retrieval/: chunking_route.cpp  documents_route.cpp  embedding_route.cpp  internet_search_route.cpp  parse_document_route.cpp
